--- a/WeatherApp/WeatherApp/Views/CurrentWeatherPage.xaml
+++ b/WeatherApp/WeatherApp/Views/CurrentWeatherPage.xaml
@@ -2,11 +2,71 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WeatherApp.Views.CurrentWeatherPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+    <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="1" HeightRequest="160" ColumnSpacing="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid BackgroundColor="#758ABA" Opacity="0.4" Grid.Column="0">
+                <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                    <Label Text="Sunday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
+                    <Label Text="01 Dec" Margin="0, -5, 0, 0" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
+                    <Image Source="cloud.png" Margin="0, 20" WidthRequest="30" HeightRequest="22"/>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="0">
+                        <Label Text="22" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                        <Label Text="°" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                    </StackLayout>
+                </StackLayout>
+            </Grid>
+
+
+            <Grid BackgroundColor="#758ABA" Opacity="0.6" Grid.Column="1">
+                <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                    <Label Text="Sunday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
+                    <Label Text="01 Dec" Margin="0, -5, 0, 0" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
+                    <Image Source="cloud.png" Margin="0, 20" WidthRequest="30" HeightRequest="22"/>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="0">
+                        <Label Text="22" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                        <Label Text="°" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                    </StackLayout>
+                </StackLayout>
+            </Grid>
+
+
+            <Grid BackgroundColor="#758ABA" Opacity="0.8" Grid.Column="2">
+                <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                    <Label Text="Sunday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
+                    <Label Text="01 Dec" Margin="0, -5, 0, 0" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
+                    <Image Source="cloud.png" Margin="0, 20" WidthRequest="30" HeightRequest="22"/>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="0">
+                        <Label Text="22" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                        <Label Text="°" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                    </StackLayout>
+                </StackLayout>
+            </Grid>
+
+
+            <Grid BackgroundColor="#758ABA" Grid.Column="3">
+                <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                    <Label Text="Sunday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
+                    <Label Text="01 Dec" Margin="0, -5, 0, 0" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
+                    <Image Source="cloud.png" Margin="0, 20" WidthRequest="30" HeightRequest="22"/>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="0">
+                        <Label Text="22" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                        <Label Text="°" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                    </StackLayout>
+                </StackLayout>
+            </Grid>
+        </Grid>
+
+    </Grid>
 </ContentPage>
